# blog_app_with_rust_and_mongodb

./: README.md
client/: auth.ts  middleware.ts  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/api/auth/[...nextauth]/: route.ts
client/app/auth/register/: page.tsx
client/app/dashboard/: page.tsx
client/app/posts/new/: page.tsx
client/app/profile/: page.tsx
client/components/: AuthModal.tsx  BlogPostCard.tsx  Navbar.tsx  ProtectedRoutes.tsx
client/components/ui/: provider.tsx
client/contexts/: auth.tsx
client/hooks/: posts.ts
client/types/: auth.ts  next-auth.d.ts
server/: .gitignore  Cargo.toml  DEVELOP.md
server/src/: auth.rs  db.rs  error.rs  main.rs  middleware.rs
server/src/handlers/: mod.rs  post_handler.rs  user_handler.rs
server/src/models/: post.rs  user.rs
server/src/routes/: api.http  mod.rs  post_routes.rs  user_routes.rs
