[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
mongodb = "3.1.0"
# Explicitly add bson with the chrono feature
bson = { version = "2.13", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15" # For managing environment variables
tower-http = { version = "0.5", features = ["cors", "trace"] } # For middleware
tracing = "0.1" # For logging
futures = "0.3"
jsonwebtoken = "9.3"
bcrypt = "0.18"
validator = { version = "0.19", features = ["derive"] }


[dev-dependencies]
cargo-watch = "8.5.3"
